--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Create new branch in gh-action-exp-2
         uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
         with:
-          repository_owner: oliver1chen
-          repository_name: gh-action-exp-2
+          repository_owner: "oliver1chen"
+          repository_name: "gh-action-exp-2"
           new_branch_name: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
           git_user_name: "Github Actions Bot"
-          git_user_email: <>
+          git_user_email: "<>"
 #           access_token: ${{ secrets.ACCESS_TOKEN}}
 
       - name: Pushes gh-action-exp-2
