--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           repository_owner: "oliver1chen"
           repository_name: "gh-action-exp-2"
           new_branch_name: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
-          git_user_name: "Github Actions Bot"
+          git_user_name: "Github-Actions-Bot"
           git_user_email: "<>"
 #           access_token: ${{ secrets.ACCESS_TOKEN}}
 
