--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,13 @@ jobs:
 #           new_branch_name: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
 #           ssh_deploy_key: ${{ secrets.SSH_DEPLOY_KEY }}
           
-      - name: Create new branch in gh-action-exp-2
-        uses: actions/checkout@v3
-        with:
-          repository: 'oliver1chen/gh-action-exp-2'
-          ref: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
-          path: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
-          ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
+#       - name: Create new branch in gh-action-exp-2
+#         uses: actions/checkout@v3
+#         with:
+#           repository: 'oliver1chen/gh-action-exp-2'
+#           ref: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
+#           path: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
+#           ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
       
 
       - name: Pushes gh-action-exp-2
