--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,14 @@ jobs:
       - name: Check UUID
         run: echo "UUID is ${{ steps.generate-uuid.outputs.uuid }}"
           
-#       - name: Create new branch in gh-action-exp-2
-#         uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
-#         with:
-#           repository_owner: 'oliver1chen'
-#           repository_name: 'gh-action-exp-2'
-#           new_branch_name: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
+      - name: Create new branch in gh-action-exp-2
+        uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
+        with:
+          repository_owner: 'oliver1chen'
+          repository_name: 'gh-action-exp-2'
+          new_branch_name: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
 #           ssh_deploy_key: ${{ secrets.SSH_DEPLOY_KEY }}
+          access_token: ${{ secrets.ACCESS_TOKEN }}
           
 #       - name: Create new branch in gh-action-exp-2
 #         uses: actions/checkout@v3
@@ -37,7 +38,8 @@ jobs:
       - name: Pushes gh-action-exp-2
         uses: cpina/github-action-push-to-another-repository@main
         env:
-          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+#           SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
         with:
           source-directory: 'src/components'
           destination-github-username: 'oliver1chen'
