--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,19 @@ jobs:
 # #           path: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
 # #           ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
 #           token: ${{ secrets.ACCESS_TOKEN }}
-          
+
+      - name: get sha of gh-action-exp-2
+        id: get_sha
+        run: |
+            curl -L \
+            -X Get \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
+            
+      - run: "echo latest release: '${{ steps.get_sha.outputs.data }}'"
+            
       - name: Create new branch in gh-action-exp-2
         run: |
             curl -L \
