--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,24 +35,24 @@ jobs:
 # #           ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
 #           token: ${{ secrets.ACCESS_TOKEN }}
 
-#       - name: get sha of gh-action-exp-2
-#         id: get_sha
-#         run: |
-#             curl -L \
-#             -X Get \
-#             -H "Accept: application/vnd.github+json" \
-#             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
-#             -H "X-GitHub-Api-Version: 2022-11-28" \
-#             https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
-            
-      - uses: octokit/request-action@v2.x
+      - name: get sha of gh-action-exp-2
         id: get_sha
-        with:
-          route: GET /repos/{owner}/{repo}/releases/latest
-          owner: oliver1chen
-          repo: gh-action-exp-2
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        run: |
+            curl -L \
+            -X Get \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/ref/head/master \
+            
+#       - uses: octokit/request-action@v2.x
+#         id: get_sha
+#         with:
+#           route: GET /repos/{owner}/{repo}/releases/latest
+#           owner: oliver1chen
+#           repo: gh-action-exp-2
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             
       - run: "echo latest release: '${{ steps.get_sha.outputs.data }}'"
             
