--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
-            -d '{"ref":"refs/heads/gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","sha":"${{ github.sha }}" }'
+            -d '{"ref":"refs/heads/gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","sha":"f4ae612bfc3fb3c9b1186e4aa395576ad05ffd92" }'
     
 #         uses: octokit/request-action@v2.x
 #         id: create_branch
