--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,12 @@ jobs:
       - name: get sha of gh-action-exp-2
         id: get_sha
         run: |
-            curl -L \
+            response = $(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/oliver1chen/gh-action-exp-2/branches/master
+            https://api.github.com/repos/oliver1chen/gh-action-exp-2/branches/master)
+            echo "response from curl= $response"
             
 #       - uses: octokit/request-action@v2.x
 #         id: get_sha
@@ -53,7 +54,8 @@ jobs:
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             
-      - run: "echo latest release: '${{ steps.get_sha.outputs.data }}'"
+      - run: |
+            echo "latest release: ${{ steps.get_sha.outputs.data }}"
             
       - name: Create new branch in gh-action-exp-2
         run: |
