--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,11 @@ jobs:
       - name: get sha of gh-action-exp-2
         id: get_sha
         run: |
-            response = $(curl -L \
+            echo "::set-output name=sha::$(curl -L \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/oliver1chen/gh-action-exp-2/branches/master)
-            echo "response from curl= $response"
+            https://api.github.com/repos/oliver1chen/gh-action-exp-2/branches/master  | jq -r '.commit.sha')
             
 #       - uses: octokit/request-action@v2.x
 #         id: get_sha
@@ -53,6 +52,9 @@ jobs:
 #           repo: gh-action-exp-2
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+#       - name: Use JSON output
+#         run: echo "${{ steps.get_sha.outputs.sha }}" > output.json
             
       - run: |
             echo "latest release: ${{ steps.get_sha.outputs.data }}"
