--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,9 @@ jobs:
 #       - name: Use JSON output
 #         run: echo "${{ steps.get_sha.outputs.sha }}" > output.json
             
+      - name: chech get sha output
       - run: |
-            echo "latest release: ${{ steps.get_sha.outputs.data }}"
+            echo "latest release: ${{ steps.get_sha.outputs.sha }}"
             
       - name: Create new branch in gh-action-exp-2
         run: |
@@ -67,7 +68,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
-            -d '{"ref":"refs/heads/gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","sha":"f4ae612bfc3fb3c9b1186e4aa395576ad05ffd92" }'
+            -d '{"ref":"refs/heads/gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","sha":"${{ steps.get_sha.outputs.sha }}" }'
     
 #         uses: octokit/request-action@v2.x
 #         id: create_branch
