--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,3 +95,13 @@ jobs:
           target-branch: 'gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}'
           target-directory: 'src/components/gh-action-exp'
 
+
+      - name: Create pull request in gh-action-exp-2
+        run: |
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/oliver1chen/gh-action-exp-2/pulls \
+            -d '{"title":"Merge branch gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","head":"gh-action-exp--${{ steps.generate-uuid.outputs.uuid }}","base":"master"}'
