--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,10 +12,6 @@ jobs:
       - name: Get current branch name
         run: echo "Current branch is ${GITHUB_BASE_REF}"
 
-
-      - name: Set current branch name
-        run: eecho "CURRENT_BRANCH=$(echo ${GITHUB_BASE_REF})" >>$GITHUB_OUTPUT
-
       - name: get sha of gh-action-exp-2
         id: get_sha
         run: |
@@ -37,7 +33,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
-            -d '{"ref":"refs/heads/gh-action-exp--${{ CURRENT_BRANCH }}","sha":"${{ steps.get_sha.outputs.sha }}" }'
+            -d '{"ref":"refs/heads/gh-action-exp--${{ GITHUB_BASE_REF }}","sha":"${{ steps.get_sha.outputs.sha }}" }'
 
       - name: Pushes gh-action-exp-2
         uses: cpina/github-action-push-to-another-repository@main
@@ -47,7 +43,7 @@ jobs:
           source-directory: 'src/components'
           destination-github-username: 'oliver1chen'
           destination-repository-name: 'gh-action-exp-2'
-          target-branch: 'gh-action-exp--${{ CURRENT_BRANCH }}'
+          target-branch: 'gh-action-exp--${{ GITHUB_BASE_REF }}'
           target-directory: 'src/components/gh-action-exp'
 
 
@@ -59,4 +55,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/pulls \
-            -d '{"title":"Pull Request from gh-action-exp--${{ CURRENT_BRANCH }}","head":"gh-action-exp--${{ CURRENT_BRANCH }}","base":"master"}'
+            -d '{"title":"Pull Request from gh-action-exp--${{ GITHUB_BASE_REF }}","head":"gh-action-exp--${{ GITHUB_BASE_REF }}","base":"master"}'
