--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,8 @@
 on:
   pull_request:
     types: [opened]
+env:
+  CURRENT_BRANCH: ${GITHUB_HEAD_REF}
     
 jobs:
   copy:
@@ -10,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Get current branch name
-        run: echo "Current branch is ${{ env.GITHUB_HEAD_REF }}"
+        run: echo "Current branch is ${{ env.CURRENT_BRANCH }}"
 
       - name: get sha of gh-action-exp-2
         id: get_sha
@@ -33,7 +35,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/git/refs \
-            -d '{"ref":"refs/heads/gh-action-exp--${{ env.GITHUB_HEAD_REF }}","sha":"${{ steps.get_sha.outputs.sha }}" }'
+            -d '{"ref":"refs/heads/gh-action-exp--${{ env.CURRENT_BRANCH }}","sha":"${{ steps.get_sha.outputs.sha }}" }'
 
       - name: Pushes gh-action-exp-2
         uses: cpina/github-action-push-to-another-repository@main
@@ -43,7 +45,7 @@ jobs:
           source-directory: 'src/components'
           destination-github-username: 'oliver1chen'
           destination-repository-name: 'gh-action-exp-2'
-          target-branch: 'gh-action-exp--${{ env.GITHUB_HEAD_REF }}'
+          target-branch: 'gh-action-exp--${{ env.CURRENT_BRANCH }}'
           target-directory: 'src/components/gh-action-exp'
 
 
@@ -55,4 +57,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oliver1chen/gh-action-exp-2/pulls \
-            -d '{"title":"Pull Request from gh-action-exp--${{ env.GITHUB_HEAD_REF }}","head":"gh-action-exp--${{ env.GITHUB_HEAD_REF }}","base":"master"}'
+            -d '{"title":"Pull Request from gh-action-exp--${{ env.CURRENT_BRANCH }}","head":"gh-action-exp--${{ env.CURRENT_BRANCH }}","base":"master"}'
