--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,5 +1,10 @@
 on:
-  push
+  push:
+    branches-ignore:
+      - master
+    paths:
+      - 'src/components/**'
+      
 env:
   CURRENT_BRANCH: ${{ github.head_ref }}
     
