--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -34,7 +34,7 @@ jobs:
     name: 'copy to gh-action-exp-2'
     runs-on: ubuntu-latest
     needs: check
-    if: check.steps.check_branch.outputs.sha != "null"
+    if: jobs.check.steps.check_branch.outputs.sha != "null"
     steps:
       - uses: actions/checkout@v3
 
