--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -12,6 +12,8 @@ jobs:
   check:
     name: 'check branch on gh-action-exp-2'
     runs-on: ubuntu-latest
+    outputs:
+      check_output: ${{ steps.check_branch.outputs.sha }}
     steps:
       - name: Get current branch name
         run: echo "Current branch is ${{ env.CURRENT_BRANCH }}"
@@ -34,7 +36,7 @@ jobs:
     name: 'copy to gh-action-exp-2'
     runs-on: ubuntu-latest
     needs: check
-    if: jobs.check.steps.check_branch.outputs.sha != "null"
+    if: ${{ jobs.check.outputs != '' }}
     steps:
       - uses: actions/checkout@v3
 
