--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -44,10 +44,10 @@ jobs:
         uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
-          TARGET_BRANCH_NAME: 'gh-action-exp--${{ env.CURRENT_BRANCH }}'
+          TARGET_BRANCH_NAME: "gh-action-exp--${{ env.CURRENT_BRANCH }}"
         with:
           source-directory: 'src/components'
           destination-github-username: 'oliver1chen'
           destination-repository-name: 'gh-action-exp-2'
-          target-branch: $TARGET_BRANCH_NAME
+          target-branch: "$TARGET_BRANCH_NAME"
           target-directory: 'src/components/gh-action-exp'
