--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,6 +2,8 @@ on:
   push:
     branches-ignore:
       - master
+    paths:
+      - 'src/components/**'
       
 env:
   CURRENT_BRANCH: "$(basename ${{ github.ref }})"
