--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -40,6 +40,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Test Step
+        run: |
+          # Get the output of the build job
+          echo "Build output: ${{ jobs.check.outputs.check_output }}"
+          # Perform test steps
+      
       - name: Get target branch name
         id: get-target-branch-name
         run: |
