--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -42,7 +42,7 @@ jobs:
       
       - name: Test Step
         run: |
-          echo "Check output: ${{ jobs.check.outputs.check_output }}"
+          echo "Check output: ${{ needs.check.outputs.check_output }}"
       
       - name: Get target branch name
         id: get-target-branch-name
