--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -36,7 +36,7 @@ jobs:
     name: 'copy to gh-action-exp-2'
     runs-on: ubuntu-latest
     needs: check
-    if: ${{ needs.check.outputs.check_output != "null" }}
+    if: ${{ needs.check.outputs.check_output != 'null' }}
     steps:
       - uses: actions/checkout@v3
       
